# literature-search-assistant

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: SOURCE_STRATEGY.md
docs/superpowers/specs/: 2026-04-30-dark-mode-redesign.md
src/litassist/: __init__.py  cli.py  config.py  db.py  dedupe.py  enrich.py  export.py  file_analyzer.py  llm_planner.py  log_capture.py  models.py  pipeline.py  planner.py  report.py  review.py  semantic_scholar_state.py  web.py  web_helpers.py  zotero.py
src/litassist/search/: __init__.py  base.py  crossref.py  google_scholar.py  openalex.py  semantic_scholar.py  wos.py  zotero_search.py
src/litassist/web_static/: LiteratureResearchLayout.jsx  LiteratureResearchPlanExperience.jsx  app.js  index.html  light-theme.css  styles.css
tests/: test_dedupe.py  test_enrich.py  test_file_analyzer.py  test_llm_planner.py  test_pipeline.py  test_planner.py  test_report.py  test_semantic_scholar_state.py  test_web.py  test_zotero.py
