[project]
name = "literature-search-assistant"
version = "0.1.0"
description = "AI-assisted literature discovery pipeline with Zotero integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyzotero>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
litassist = "litassist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litassist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
